experiement_output/error_log/nondex-LoisDuplain-gradient-generator.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task591/wd/NonDex-plugin-test/github.com/LoisDuplain/gradient-generator/src/main/java/fr/loisduplain/gradientgenerator/Gradient.java:19: error: cannot find symbol
        this.colors = new ArrayList<>(Arrays.stream(colors).toList());
                                                           ^
  symbol:   method toList()
  location: interface Stream<Color>
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 3s
